--- a/public/css/index.css
+++ b/public/css/index.css
@@ -418,7 +418,7 @@ video {
 	width: 100%;
 }
 #videos-container .media-container { 
-	bottom: 0;
+	top: 0;
 	margin: 0.5%;
 	position: relative;
 	/* position: absolute; */
