--- a/views/room.ejs
+++ b/views/room.ejs
@@ -282,18 +282,18 @@
 			
 			<br class="useWebBoard"/>
 			
-			<!-- 마이크 버튼 -->
-			<button class="btn btn--xl btn--indigo btn--fab mdi md-mic buttonMic" title="마이크" style="position: relative; overflow: hidden; font-size: 1.5rem;">
+			<!-- 음소거 버튼 -->
+			<button class="btn btn--xl btn--indigo btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" data-value="ture" style="position: relative; overflow: hidden; font-size: 1.5rem;">
 				<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				<p>마이크</p>
+				<p>스피커</p>
 			</button>
 			
 			<br class="useWebBoard"/>
 			
-			<!-- 음소거 버튼 -->
-			<button class="btn btn--xl btn--deep-purple btn--fab mdi md-volume-up buttonVolume" title="스피커" style="position: relative; overflow: hidden; font-size: 1.5rem;">
+			<!-- 마이크 버튼 -->
+			<button class="btn btn--xl btn--deep-purple btn--fab mdi md-mic buttonMic" title="마이크" style="position: relative; overflow: hidden; font-size: 1.5rem;">
 				<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-				<p>스피커</p>
+				<p>마이크</p>
 			</button>
 			
 			<br class="useWebBoard"/>
