Update 대화명 변경 기능 추가, 방이름 한글 인코딩처리, 모바일 UX/UI 일부 변경
- 영상에 대화명 표시 및 변경 추가
- 방 이름이 한글일 경우 인코딩 처리
- 모바일에서 접속자가 3명일 경우 다른 사용자의 이름을 가려 위치 변경

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -617,6 +617,23 @@ video {
 
 /* board start */
 #__gesture_canvas__ { opacity: 0; }
+
+#whiteBoardMobAlarmDiv {
+	height: 100%;
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	z-index: 10;
+}
+#whiteBoardMobAlarmDiv p {
+	background-color: rgba(0,0,0,.8);
+	color: white;
+	display: block;
+	height: 80px;
+	margin: 0;
+	padding: 25px;
+}
+
 #whiteBoardDiv {
 	border: 0;
 	border-right: 1px solid #2BC1A4;
@@ -845,6 +862,47 @@ img.uploadImg {
 	z-index: 1;
 }
 /* alert background end */
+
+
+/* changeNameAlert start */
+#changeNameAlert {
+	background-color: white;
+	border-radius: 0.2em;
+	color: black;
+	display: none;
+	overflow: hidden; 
+	position: absolute;
+	width: 375px;
+	z-index: 10;
+}
+.changeNameAlertTitle {
+	background-color: #343a40;
+	color: white;
+	font-size: .9rem;
+	font-weight: bold;
+	padding: 10px;
+	text-align: left;
+}
+.changeNameAlertContent{
+	padding: 1rem;
+}
+.changeNameAlertContent input {
+	margin: auto;
+	width: 90%;
+}
+.changeNameAlertfooter{
+    padding: 1rem;
+	text-align: center;
+}
+
+.changeNameAlertfooter .btn {
+    color: white;
+    font-size: 0.85rem;
+    font-weight: bold;
+    padding: .5rem 3.5rem;
+}
+.changeNameAlertfooter .btn { background-color: #c4bdb3; }
+/* changeNameAlert end */
 
 
 /* messageAlert start */
@@ -1097,7 +1155,7 @@ img.uploadImg {
 	z-index: 3;
 }
 #footerMenu > div {
-	background-color: rgba(0, 0, 0, .5);
+	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 4px;
 	display: inline-block;
 	/* padding: 10px; */
