--- a/views/room.ejs
+++ b/views/room.ejs
@@ -212,6 +212,33 @@
 		</div>
 	</div>
 	
+	<!-- 닉네임변경창 -->
+	<div id="changeNameAlert">
+		<div class="changeNameAlertTitle">닉네임 변경</div>
+		
+		<div class="changeNameAlertContent">
+			<input type="text" id="newName" class="form-control" placeholder="닉네임" value="" autocorrect=off autocapitalize=off size=20>
+		</div>
+		
+		<div class="changeNameAlertfooter">
+			<input type="button" value="확인" class="btn changeNameBtn" onclick="" style="background-color: #2BC1A4;">
+			<input type="button" value="쥐소" class="btn changeNameCancelBtn" onclick="">
+		</div>
+	</div>
+	
+	<!-- 메세지창 -->
+	<div id="messageAlert">
+		<div class="messageAlertTitle">알림</div>
+		
+		<div class="messageAlertContent">
+			<p id="messageTag"></p>
+		</div>
+		
+		<div class="messageAlertfooter">
+			<input type="button" value="메인으로" class="btn messageBtn" onclick="">
+		</div>
+	</div>
+	
 	<!-- 권한 허용방법 알림창 -->
 	<div id="permissionAlert">
 		<div class="permissionAlertTitle">알림</div>
