Update adapter.js 변경, 4명접속시 UI 변경, 카메라 변경 기능 추가(아이폰 제외)
- adapter.js을 최신 버전으로 변경
- 4명 접속시 영상 배치 UI 를 변경
- 카메라 변경 기능 추가(아이폰 제외, safari 테스트 필요)
- 카메라 변경 기능에 따른 방장 기능 off

--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -431,6 +431,6 @@ footer .footer_info {
 
 @media screen and (min-width: 1200px) {
 	#videos-container .media-container {
-		width: 32%;
+		/* width: 32%; */
 	}
 }
