--- a/views/room.ejs
+++ b/views/room.ejs
@@ -45,36 +45,20 @@
 	
 	<!-- 확인을 위해 script src="/dist/RTCMultiConnection.min.js"></script -->
 	<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-	<script src="/dist/RTCMultiConnection.js"></script>
 	<script src="/dev/adapter.js"></script>
+	<script src="/dist/RTCMultiConnection.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 
 	<!-- custom layout for HTML5 audio/video elements -->
 	<link rel="stylesheet" href="/dev/getHTMLMediaElement.css">
 	<script src="/dev/getHTMLMediaElement.js"></script>
 	<script src="/dev/FileBufferReader.js"></script>
-	
-	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119868541-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		
-		gtag('config', 'UA-119868541-1');
-	</script>
 </head>
 
 <script type="text/javascript">
 	function psycareFnt(){
 		if( '<%= roomID %>') document.getElementById('room-id').value = '<%= roomID %>';
 		if( '<%= userName %>') document.getElementById('userName').value = '<%= userName %>';
-		if( '<%= psycare %>') document.getElementById('psycare').value = '<%= psycare %>';
-		
-		if( document.getElementById('room-id').value.length != 0 && document.getElementById('psycare').value == 'psycare' ){
-			$('#open-or-join-room').trigger('click');
-		}
 	}
 </script>
 
@@ -86,7 +70,6 @@
 	
 	<input type="hidden" id="room-id">
 	<input type="hidden" id="userName" name="userName">
-	<input type="hidden" id="psycare" name="psycare">
 	
 	<div id="roomHeadDiv">
 		<!-- 로고 -->
@@ -128,13 +111,13 @@
 		<!-- 로딩 -->
 		<div id="roomProgressBar">
 			<div class="row" style="height: 100%;">
-	            <div id="loading">
-	                <ul class="bokeh">
-	                    <li></li>
-	                    <li></li>
-	                    <li></li>
-	                    <li></li>
-	                </ul>
+				<div id="loading">
+					<ul class="bokeh">
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -155,6 +138,62 @@
 		
 		<div id="room-urls" style="text-align: center;display: none;background: #F1EDED;margin: 15px -10px;border: 1px solid rgb(189, 189, 189);border-left: 0;border-right: 0;"></div>
 		
+		<!-- 화이트보드 -->
+		<div id="whiteBoardDiv" data-value="false">
+			<div class="boardLeftDiv">
+				<!-- 화이트보드 파일 업로드창 -->
+				<div class="center">
+					<div class="profile">
+						<span class="parameter" id="pdfName">선택된 파일이<br/>없습니다.</span>
+						
+						<div class="actions">
+							<a href="javascript:;" class="btn file">파일선택
+								<input id='pdf' type='file' data-value="true" accept="application/pdf" style="height: 100%; width: 100%;">
+							</a>
+							<div class="job">파일 크기 : <span class="parameter" id="sizeText">0</span> / 10Mb</div>
+						</div>
+					</div>
+				</div>
+				
+				<div id="imgDiv"></div>
+				
+				<!-- progres -->
+				<div id="imgProgressDiv" style="display: none;">
+					<div class="row">
+			            <div id="loading">
+			                <ul class="bokeh">
+			                    <li></li>
+			                    <li></li>
+			                    <li></li>
+			                    <li></li>
+			                </ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<!-- 모바일 알림용 -->
+			<div id="whiteBoardMobAlarmDiv" style="display: none;">
+				<p>모바일에선 보기만 가능합니다</p>
+			</div>
+			
+			<!-- 화이트보드 -->
+			<div id="whiteBoardLayer">
+				<div id="boardProgress">
+					<div class="row">
+						<div id="loading">
+							<ul class="bokeh">
+							    <li></li>
+							    <li></li>
+							    <li></li>
+							    <li></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 		
 		<!-- 채팅 -->
 		<div id="chat-container" data-value="false">
@@ -165,7 +204,7 @@
 			</button>
 			
 			<!-- 파일공유 -->
-			<button class="btn btn--xl btn--purple btn--fab mdi md-file-upload" id="share-file" title="종료" disabled style="position: relative; overflow: hidden; font-size: 1.9rem;">
+			<button class="btn btn--xl btn--purple btn--fab mdi md-file-upload" id="share-file" title="종료" disabled style="position: relative; overflow: hidden; font-size: 1.5rem;">
 				<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
 			</button>
 			
@@ -186,7 +225,7 @@
 				
 				<input type="text" id="input-text-chat" autocomplete="off">
 				
-				<button class="btn btn--xl btn--red btn--fab mdi md-send" id="messageSendBtn" title="전송" style="position: relative; overflow: hidden; font-size: 1.9rem;">
+				<button class="btn btn--xl btn--red btn--fab mdi md-send" id="messageSendBtn" title="전송" style="position: relative; overflow: hidden; font-size: 1.5rem;">
 					<span class="ripple" style="height: 56px; width: 56px; top: 2px; left: 18.125px;"></span>
 				</button>
 			</div>
@@ -195,21 +234,8 @@
 	
 	
 	<!-- 팝업용 백그라운드 -->
-	<div id="mask" style="display: none; opacity: .7; z-index: 5;">
+	<div id="mask" style="display: none; opacity: .7; z-index: 6;">
 		<!-- <img alt="Loading" src="/img/spinner.gif"> -->
-	</div>
-	
-	<!-- 메세지창 -->
-	<div id="messageAlert">
-		<div class="messageAlertTitle">알림</div>
-		
-		<div class="messageAlertContent">
-			<p id="messageTag"></p>
-		</div>
-		
-		<div class="messageAlertfooter">
-			<input type="button" value="메인으로" class="btn messageBtn" onclick="">
-		</div>
 	</div>
 	
 	<!-- 닉네임변경창 -->
@@ -277,7 +303,7 @@
 				<span>카메라<span>
 				<select id="selectCamera" data-value="false"></select>
 			</div>
-            <br/>
+			<br/>
 			<div>
 				<label style="margin-bottom: 0;">내 영상 좌우반전
 				<input type="checkbox" id="myVideoRotate" checked data-value="true"></label>
@@ -285,6 +311,7 @@
 		</div>
 		
 		<div class="optionAlertfooter">
+			<input type="button" value="확인" class="btn firstOptionOkBtn" style="background-color: #2BC1A4; display: none;">
 			<input type="button" value="확인" class="btn optionOkBtn">
 			<input type="button" value="닫기" class="btn optionCloseBtn">
 		</div>
@@ -294,13 +321,6 @@
 	<!-- 하단메뉴 -->
 	<div id="footerMenu" style="display: none;">
 		<div>
-			<!-- 전체화면 -->
-			<!-- 
-			<button class="mobNone btn btn--xl btn--green btn--fab mdi md-fullscreen" onclick="goFullscreen(this)" title="Full screen" style="position: relative; overflow: hidden; font-size: 1.5rem;">
-				<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
-			</button>
-			-->
-			
 			<!-- 옵션 버튼 -->
 			<button class="btn btn--xl btn--blue btn--fab mdi md-settings buttonOption" title="설정" style="position: relative; overflow: hidden; font-size: 1.5rem;">
 				<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
@@ -345,7 +365,7 @@
 			<br class="useWebBoard"/>
 			
 			<!-- 영상 -->
-			<button class="btn btn--xl btn--light-green btn--fab mdi md-person videoBtn" title="영상통화" data-value="false" style="position: relative; font-size: 1.5rem; display: none;">
+			<button class="btn btn--xl btn--light-green btn--fab mdi md-person videoBtn" title="영상통화" data-value="false" style="position: relative; overflow: hidden; font-size: 1.5rem; display: none;">
 				<span class="ripple" style="height: 56px; width: 56px; top: 6px; left: -14.625px;"></span>
 				<p>영상통화</p>
 			</button>
