Update 방생성자가 없어도 방이 유지되도록 변경, 사용자 대화명 유지, 스피커버튼 제거, 사용자정보 출력 기능 추가
- 방 생성자가 없어도 방이 유지되도록 변경
- 페이지 새로고침시에도 대화명이 유지되도록 변경
- 스피커버튼 제거(차후 구현)
- 사용자 접속 정보 출력 기능 추가(isGetStatus)

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -44,8 +44,8 @@
 	
 	
 	<!-- 확인을 위해 script src="/dist/RTCMultiConnection.min.js"></script -->
-	<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 	<script src="/dev/adapter.js"></script>
+	<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 	<script src="/dist/RTCMultiConnection.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 
@@ -53,6 +53,8 @@
 	<link rel="stylesheet" href="/dev/getHTMLMediaElement.css">
 	<script src="/dev/getHTMLMediaElement.js"></script>
 	<script src="/dev/FileBufferReader.js"></script>
+	
+	<script src="/dev/getStats.js"></script>
 </head>
 
 <script type="text/javascript">
@@ -330,12 +332,14 @@
 			<br class="useWebBoard"/>
 			
 			<!-- 음소거 버튼 -->
+			<!--
 			<button class="btn btn--xl btn--indigo btn--fab mdi md-volume-up buttonVolume" id="스피커 끄기" data-value="ture" style="position: relative; overflow: hidden; font-size: 1.5rem;">
 				<span class="ripple" style="height: 56px; width: 56px; top: -11px; left: -15.25px;"></span>
 				<p>스피커</p>
 			</button>
 			
 			<br class="useWebBoard"/>
+			-->
 			
 			<!-- 마이크 버튼 -->
 			<button class="btn btn--xl btn--deep-purple btn--fab mdi md-mic buttonMic" title="마이크" style="position: relative; overflow: hidden; font-size: 1.5rem;">
