update 고객센터 메일 변경

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -126,7 +126,7 @@
 					<p style="margin: 5px;"><span>고객센터</span><br>
 					Tel : 02-2039-3977<br>
 					Fax : 02-2039-3978<br>
-					E-mail : servicedesk@invesume.com</p>
+					E-mail : service@invesume.com</p>
 				</div>
 			</div>
 			
