update html font-size
폰트사이즈가 가변적이라 방 이름을 입력할 수 없는 경우가 발생하여 수정 16px로 고정

--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -12,6 +12,7 @@ a:link, a:visited, a:hover, a:active{
 	text-decoration: none !important;
 }
 
+html { font-size: 16px }
 
 body {
 	background-image: url(../img/bg.jpg);
